--- a/ggChannelAnalysis/src/Makefile.in
+++ b/ggChannelAnalysis/src/Makefile.in
@@ -14,8 +14,8 @@ ECHO  = /bin/echo
 
 ROOTFLAGS = `root-config --cflags --glibs`
 
-CFLAGS = -O2 -Wall -std=c++11 $(PKGFLAG) $(ROOTFLAGS)
 CFLAGS = -g  -Wall -std=c++11 $(PKGFLAG) $(ROOTFLAGS)
+CFLAGS = -O2 -g -Wall -std=c++11 $(PKGFLAG) $(ROOTFLAGS)
 
 .PHONY: .depend.mak .extheader.mak
 
